Réorganisation du projet. Les lib sont maintenant copiées dans le dossier lib après la compilation.

--- a/src/src/libCore/libCore.vcproj
+++ b/src/src/libCore/libCore.vcproj
@@ -63,6 +63,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
+				CommandLine="copy &quot;$(OutDir)\$(ProjectName).lib&quot; &quot;$(SolutionDir)\lib\debug\&quot;"
 			/>
 		</Configuration>
 		<Configuration
@@ -115,6 +116,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
+				CommandLine="copy &quot;$(OutDir)\$(ProjectName).lib&quot; &quot;$(SolutionDir)\lib\release\&quot;"
 			/>
 		</Configuration>
 	</Configurations>
