--- a/trunk/src/src/libObjects/libObjects.vcproj
+++ b/trunk/src/src/libObjects/libObjects.vcproj
@@ -2,9 +2,9 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="8,00"
-	Name="libResources"
-	ProjectGUID="{8E277367-E39D-45A3-A4E2-95372E1243F4}"
-	RootNamespace="libResources"
+	Name="libObjects"
+	ProjectGUID="{A2954935-EA1D-4483-B9EE-54C8324F0221}"
+	RootNamespace="libObjects"
 	>
 	<Platforms>
 		<Platform
@@ -72,7 +72,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine=""
+				CommandLine="copy &quot;$(OutDir)\$(ProjectName).lib&quot; &quot;$(SolutionDir)\lib\debug\&quot;"
 			/>
 		</Configuration>
 		<Configuration
@@ -131,7 +131,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine=""
+				CommandLine="copy &quot;$(OutDir)\$(ProjectName).lib&quot; &quot;$(SolutionDir)\lib\release\&quot;"
 			/>
 		</Configuration>
 	</Configurations>
@@ -139,79 +139,87 @@
 	</References>
 	<Files>
 		<Filter
-			Name="Anim"
+			Name="Camera"
 			>
 			<File
-				RelativePath=".\Anim.cpp"
+				RelativePath=".\Camera.cpp"
 				>
 			</File>
 			<File
-				RelativePath=".\Anim.h"
+				RelativePath=".\Camera.h"
 				>
 			</File>
 			<File
-				RelativePath=".\AnimManager.cpp"
+				RelativePath=".\CameraFPS.cpp"
 				>
 			</File>
 			<File
-				RelativePath=".\AnimManager.h"
+				RelativePath=".\CameraFPS.h"
 				>
 			</File>
 		</Filter>
 		<Filter
-			Name="Texture"
+			Name="Light"
 			>
 			<File
-				RelativePath=".\Texture.cpp"
+				RelativePath=".\Light.cpp"
 				>
 			</File>
 			<File
-				RelativePath=".\Texture.h"
-				>
-			</File>
-			<File
-				RelativePath=".\TextureManager.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\TextureManager.h"
+				RelativePath=".\Light.h"
 				>
 			</File>
 		</Filter>
 		<Filter
-			Name="Mesh"
+			Name="Particle"
+			>
+		</Filter>
+		<Filter
+			Name="SceneObject"
 			>
 			<File
-				RelativePath=".\Mesh.cpp"
+				RelativePath=".\SceneObject.cpp"
 				>
 			</File>
 			<File
-				RelativePath=".\Mesh.h"
+				RelativePath=".\SceneObject.h"
 				>
 			</File>
-			<File
-				RelativePath=".\MeshManager.cpp"
+			<Filter
+				Name="SceneObjectAnimated"
 				>
-			</File>
-			<File
-				RelativePath=".\MeshManager.h"
-				>
-			</File>
+				<File
+					RelativePath=".\Alien.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\Alien.h"
+					>
+				</File>
+				<File
+					RelativePath=".\Hero.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\Hero.h"
+					>
+				</File>
+				<File
+					RelativePath=".\SceneObjectAnimated.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\SceneObjectAnimated.h"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<File
-			RelativePath=".\Resource.cpp"
+			RelativePath=".\Object.cpp"
 			>
 		</File>
 		<File
-			RelativePath=".\Resource.h"
-			>
-		</File>
-		<File
-			RelativePath=".\ResourceManager.cpp"
-			>
-		</File>
-		<File
-			RelativePath=".\ResourceManager.h"
+			RelativePath=".\Object.h"
 			>
 		</File>
 	</Files>
