--- a/trunk/src/src/libRenderer/libRenderer.vcproj
+++ b/trunk/src/src/libRenderer/libRenderer.vcproj
@@ -57,6 +57,7 @@
 			/>
 			<Tool
 				Name="VCLibrarianTool"
+				AdditionalLibraryDirectories="&quot;$(SolutionDir)\lib\debug&quot;"
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -116,6 +117,7 @@
 			/>
 			<Tool
 				Name="VCLibrarianTool"
+				AdditionalLibraryDirectories="&quot;$(SolutionDir)\lib\release&quot;"
 			/>
 			<Tool
 				Name="VCALinkTool"
