--- a/trunk/src/src/libCore/libCore.vcproj
+++ b/trunk/src/src/libCore/libCore.vcproj
@@ -36,6 +36,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
+				AdditionalIncludeDirectories="&quot;$(SolutionDir)\src&quot;"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -90,6 +91,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
+				AdditionalIncludeDirectories="&quot;$(SolutionDir)\src&quot;"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
