--- a/src/src/System/System.vcproj
+++ b/src/src/System/System.vcproj
@@ -39,7 +39,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="&quot;$(SolutionDir)\src&quot;"
+				AdditionalIncludeDirectories="&quot;$(SolutionDir)src&quot;"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -58,8 +58,8 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="libCore.lib libObjects.lib libRenderer.lib libResources.lib"
-				AdditionalLibraryDirectories="&quot;$(SolutionDir)\lib\debug&quot;"
+				AdditionalDependencies="libCore.lib libObjects.lib libRenderer.lib libResources.lib d3dx9.lib"
+				AdditionalLibraryDirectories="&quot;$(SolutionDir)lib\debug&quot;"
 				GenerateDebugInformation="true"
 				TargetMachine="1"
 			/>
@@ -113,7 +113,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalIncludeDirectories="&quot;$(SolutionDir)\src&quot;"
+				AdditionalIncludeDirectories="&quot;$(SolutionDir)src&quot;"
 				RuntimeLibrary="2"
 				WarningLevel="3"
 				Detect64BitPortabilityProblems="true"
@@ -130,8 +130,8 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="libCore.lib libObjects.lib libRenderer.lib libResources.lib"
-				AdditionalLibraryDirectories="&quot;$(SolutionDir)\lib\release&quot;"
+				AdditionalDependencies="libCore.lib libObjects.lib libRenderer.lib libResources.lib d3dx9.lib"
+				AdditionalLibraryDirectories="&quot;$(SolutionDir)lib\release&quot;"
 				GenerateDebugInformation="true"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
