Mise à jour du vcproj de Object. Ajout de la matrice de projection et de visualisation dans la classe Camera. Définition de la classe Vector3f dans Vector. Mise a jour de CameraFPS et TPS.
Mise a jour de fraise... entre autre

--- a/src/src/libObjects/libObjects.vcproj
+++ b/src/src/libObjects/libObjects.vcproj
@@ -161,6 +161,14 @@
 				RelativePath=".\CameraFPS.h"
 				>
 			</File>
+			<File
+				RelativePath=".\CameraTPS.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\CameraTPS.h"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Light"
