Ajout d'un type Vector2f (pour les coorodonnées de texture) et mise à jour du Mesh et de son chargement

--- a/src/src/libResources/libResources.vcproj
+++ b/src/src/libResources/libResources.vcproj
@@ -195,6 +195,14 @@
 				>
 			</File>
 			<File
+				RelativePath=".\MeshLoader.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\MeshLoader.h"
+				>
+			</File>
+			<File
 				RelativePath=".\MeshManager.cpp"
 				>
 			</File>
