Mise à jour resources

--- a/src/src/Engine/Engine.vcproj
+++ b/src/src/Engine/Engine.vcproj
@@ -422,7 +422,7 @@
 				Name="Shader"
 				>
 				<File
-					RelativePath=".\Resources\default.fx"
+					RelativePath="..\..\data\shader\default.fx"
 					>
 				</File>
 				<File
