Maj physX, ajout d'un singleton de Physicalizer dans Render() et amorce d'ajout des PhysicalObjects dans SceneObject. NOMINMAX, va chier. Retrait de tout le bordel de timer, seul une fonction de 5 ligne est necessaire tout compte fait.

--- a/src/src/Engine/Engine.vcproj
+++ b/src/src/Engine/Engine.vcproj
@@ -58,6 +58,7 @@
 			/>
 			<Tool
 				Name="VCLibrarianTool"
+				AdditionalDependencies="PhysXLoader.lib"
 				AdditionalLibraryDirectories="&quot;$(SolutionDir)lib\debug&quot;"
 			/>
 			<Tool
