Maj PhysX => Fusion des classes PhysicalObject et BoundingBox dans un fichier renommé en BoundingBox.h Ajout d'une list de BoundingBox dans SceneObject qui permettra de récuperer la transfo des BoundingBox à appliquer a l'objet. Enfin, ajout de qqs #define NOMINMAX nécessaires a la compil.

--- a/src/src/Engine/Engine.vcproj
+++ b/src/src/Engine/Engine.vcproj
@@ -484,19 +484,19 @@
 			Name="Physics"
 			>
 			<File
+				RelativePath=".\Physics\BoundingBox.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Physics\BoundingBox.h"
+				>
+			</File>
+			<File
 				RelativePath=".\Physics\Physicalizer.cpp"
 				>
 			</File>
 			<File
 				RelativePath=".\Physics\Physicalizer.h"
-				>
-			</File>
-			<File
-				RelativePath=".\Physics\PhysicalObject.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\Physics\PhysicalObject.h"
 				>
 			</File>
 		</Filter>
