--- a/src/src/Test/Test.vcproj
+++ b/src/src/Test/Test.vcproj
@@ -40,7 +40,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories="&quot;$(SolutionDir)src\Engine&quot;;&quot;$(SolutionDir)include&quot;"
-				PreprocessorDefinitions="_CRT_SECURE_NO_DEPRECATE"
+				PreprocessorDefinitions="_WIN32;WIN32;_CRT_SECURE_NO_DEPRECATE"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -60,7 +60,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				AdditionalOptions="/NODEFAULTLIB:libcmt&#x0D;&#x0A;/NODEFAULTLIB:libcmtd"
-				AdditionalDependencies="Engine.lib d3dx9.lib d3d9.lib Winmm.lib tinyxmld.lib"
+				AdditionalDependencies="dxguid.lib d3dx9.lib d3d9.lib Engine.lib Winmm.lib tinyxmld.lib"
 				AdditionalLibraryDirectories="&quot;$(SolutionDir)lib\debug&quot;"
 				GenerateDebugInformation="true"
 				TargetMachine="1"
