Mise à jour des Object2D/Sprite : position, scale et alpha fonctionnels. Ajout d'un Math.h qui inclus la lib math standard du c++, tous les types du moteur, et des macros fort utiles.

--- a/src/src/Engine/Engine.vcproj
+++ b/src/src/Engine/Engine.vcproj
@@ -149,6 +149,10 @@
 			Name="Core"
 			>
 			<File
+				RelativePath=".\Core\Math.h"
+				>
+			</File>
+			<File
 				RelativePath=".\Core\Singleton.h"
 				>
 			</File>
