Archivage temporaire pour la 2D (ouais j'utilise SVN pour échanger des fichiers entre mes pc). Manque le code des sprites (qui va arriver sous peu), mais tout le reste fonctionne..

--- a/src/src/Engine/Engine.vcproj
+++ b/src/src/Engine/Engine.vcproj
@@ -292,19 +292,19 @@
 				Name="Object2D"
 				>
 				<File
-					RelativePath=".\Objects\Object2D\Mask.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\Objects\Object2D\Mask.h"
-					>
-				</File>
-				<File
 					RelativePath=".\Objects\Object2D\Object2D.cpp"
 					>
 				</File>
 				<File
 					RelativePath=".\Objects\Object2D\Object2D.h"
+					>
+				</File>
+				<File
+					RelativePath=".\Objects\Object2D\Quad.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\Objects\Object2D\Quad.h"
 					>
 				</File>
 				<File
