Grosse Màj PhysX : exemple de comment rendre un objet physique dans LevelStart.Init Modif de Alien1.DAE pour mettre le repère à ses pieds.

--- a/src/src/Engine/Engine.vcproj
+++ b/src/src/Engine/Engine.vcproj
@@ -164,6 +164,14 @@
 				RelativePath=".\Core\System.h"
 				>
 			</File>
+			<File
+				RelativePath=".\Core\Time.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Core\Time.h"
+				>
+			</File>
 			<Filter
 				Name="Inputs"
 				>
