Mise à jour du moteur : - Modification SceneObjet et SceneObjectAnimated - Anim et AnimLoader - Ajout de matériaux - Modification Lights - Renderer : gère une liste de lumières

--- a/src/src/Engine/Engine.vcproj
+++ b/src/src/Engine/Engine.vcproj
@@ -504,6 +504,18 @@
 					>
 				</File>
 			</Filter>
+			<Filter
+				Name="Material"
+				>
+				<File
+					RelativePath=".\Resources\Material.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\Resources\Material.h"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="Game"
