Acces/modif de la clearcolor via le Renderer. Acces aux dimensions de la fenêtre via le Renderer. Ajout de filtres anisotropes sur les textures des Object2D. Level Alafraise (avec le logo) dans le projet CrockRising.

--- a/src/src/CrockRising/CrockRising.vcproj
+++ b/src/src/CrockRising/CrockRising.vcproj
@@ -185,6 +185,18 @@
 				RelativePath=".\Levels\NewLevel.cpp"
 				>
 			</File>
+			<Filter
+				Name="Logos"
+				>
+				<File
+					RelativePath=".\Levels\LevelAlafraise.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\Levels\LevelAlafraise.h"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<File
 			RelativePath=".\Main.cpp"
